<?xml version="1.0"?>
<package format="2">
  <name>skills_executer</name>
  <version>0.0.0</version>
  <description>The skills_executer package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>manipulation_msgs</depend>
  <depend>configuration_msgs</depend>
  <depend>simple_touch_controller_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>skills_executer_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
